# AdventOfCode_2020

./: .gitignore  CMakeLists.txt
Task01/: CMakeLists.txt  main.cpp
Task02/: CMakeLists.txt
Task03/: AreaMap.h  CMakeLists.txt  main.cpp
Task04/: CMakeLists.txt  Passport.cpp  Passport.h  main.cpp
Task05/: CMakeLists.txt  main.cpp
Task06/: CMakeLists.txt
Task07/: CMakeLists.txt
Task08/: CMakeLists.txt
Task09/: CMakeLists.txt
Task1/: CMakeLists.txt  main.cpp
Task10/: CMakeLists.txt  main.cpp
Task11/: CMakeLists.txt  Matrix.h  main.cpp
Task12/: CMakeLists.txt  PositionPart1.h  PositionPart2.h  main.cpp
Task13/: CMakeLists.txt  main.cpp
Task14/: CMakeLists.txt  main.cpp
Task15/: CMakeLists.txt  main.cpp
Task16/: CMakeLists.txt  main.cpp
Task17/: CMakeLists.txt  main.cpp
Task18/: CMakeLists.txt  main.cpp
Task19/: CMakeLists.txt  main.cpp
Task2/: CMakeLists.txt  Password.cpp  Password.h  main.cpp
Task20/: CMakeLists.txt  main.cpp
Task21/: CMakeLists.txt  main.cpp
Task22/: CMakeLists.txt  main.cpp
Task23/: CMakeLists.txt  main.cpp
Task24/: CMakeLists.txt  main.cpp
Task25/: CMakeLists.txt
Task3/: AreaMap.h  CMakeLists.txt  main.cpp
Task4/: CMakeLists.txt  Passport.cpp  main.cpp
Task5/: main.cpp
Task6/: main.cpp
Task7/: main.cpp
Task8/: CMakeLists.txt  main.cpp
Task9/: CMakeLists.txt  main.cpp
