cmake_minimum_required(VERSION 3.17)
project(AdventOfCode_2020)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Task01)
add_subdirectory(Task02)
add_subdirectory(Task03)
add_subdirectory(Task04)
add_subdirectory(Task05)
add_subdirectory(Task06)
add_subdirectory(Task07)
add_subdirectory(Task08)
add_subdirectory(Task09)
add_subdirectory(Task10)
add_subdirectory(Task11)
add_subdirectory(Task12)
add_subdirectory(Task13)
add_subdirectory(Task14)
add_subdirectory(Task15)
add_subdirectory(Task16)
add_subdirectory(Task17)
add_subdirectory(Task18)
add_subdirectory(Task19)
add_subdirectory(Task20)
add_subdirectory(Task21)
add_subdirectory(Task22)
add_subdirectory(Task23)
add_subdirectory(Task24)
add_subdirectory(Task25)
